[gd_scene format=3 uid="uid://bc2b508jstjar"]

[ext_resource type="Script" path="res://ui/hud/hud_ui.gd" id="1_dwx17"]
[ext_resource type="PackedScene" path="res://ui/hud/key_selector_popup.tscn" id="2_popup"]
[ext_resource type="Theme" path="res://ui/resources/main_theme.tres" id="3_theme"]
[ext_resource type="Texture2D" path="res://ui/resources/icons/play.svg" id="4_play_icon"]
[ext_resource type="Texture2D" path="res://ui/resources/icons/settings.svg" id="5_settings_icon"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_theme")
script = ExtResource("1_dwx17")

[node name="TopBarContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 56.0
grow_horizontal = 2
mouse_filter = 2

[node name="TopBarPanel" type="PanelContainer" parent="TopBarContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBarContainer/TopBarPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="TopBar" type="HBoxContainer" parent="TopBarContainer/TopBarPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("4_play_icon")
icon_alignment = 1
expand_icon = true

[node name="StopButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "■"

[node name="RecordButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
text = "●"

[node name="MetronomeButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "M"
tooltip_text = "Metronome"

[node name="VSeparator" type="VSeparator" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
layout_mode = 2

[node name="KeyButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"HeaderMedium"
text = "A Major • Im7"
flat = true

[node name="VSeparator2" type="VSeparator" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
layout_mode = 2

[node name="BPMLabel" type="Label" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
layout_mode = 2
text = "BPM"
vertical_alignment = 1



[node name="BPMSpinBox" type="SpinBox" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
min_value = 40.0
max_value = 240.0
value = 120.0
alignment = 1

[node name="VSeparator3" type="VSeparator" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="TopBarContainer/TopBarPanel/MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("5_settings_icon")
icon_alignment = 1
expand_icon = true
tooltip_text = "Settings"

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 300.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)

[node name="KeySelectorPopup" parent="." instance=ExtResource("2_popup")]
unique_name_in_owner = true
